--- a/views/widget.xml
+++ b/views/widget.xml
@@ -13,7 +13,7 @@
 						<Label class="dateLabel" id='endDate' text='' />
 					</View>
 				</View>
-				<Label id="duration"  />
+				<Label id="duration" height="40dp" text="L('duration','Duration')"/>
 				<Picker id="picker" onChange="doChange" />
 				<View id="buttonDiv">
 					<Button id="btnOK" title="OK" left="10dp" />
