--- a/datePeriodPicker/views/widget.xml
+++ b/datePeriodPicker/views/widget.xml
@@ -4,21 +4,21 @@
 			<View id="pickerView">
 				<View id="labelDiv">
 					<View id="divStart" class="divLabels" onClick="doSelect" >
-						<Label class="dateLabel" left="5dp" id="startText" text='Start : ' />
+						<Label class="dateLabel" left="5dp" id="startText" />
 						<Label class="dateLabel" id='startDate' text="" />
 					</View>
 					<View height="2dp" width="Titanium.UI.FILL" backgroundColor="white" />
 					<View id="divEnd" class="divLabels" onClick="doSelect">
-						<Label class="dateLabel" left="5dp" id="endText" text='End : ' /> 
+						<Label class="dateLabel" left="5dp" id="endText" /> 
 						<Label class="dateLabel" id='endDate' text='' />
 					</View>
 				</View>
 				<Label id="duration" height="40dp" text="L('duration','Duration')"/>
 				<Picker id="picker" onChange="doChange" />
 				<View id="buttonDiv">
-					<Button id="btnOK" title="OK" left="10dp" />
-					<Button id="btnReset" title="Reset" onClick="doReset"/>
-					<Button id="btnCancel" title="Cancel" right="10dp" />
+					<Button id="btnOK" left="10dp" />
+					<Button id="btnReset" onClick="doReset"/>
+					<Button id="btnCancel" right="10dp" />
 				</View>
 			</View>
 		</View>
